<resources>
    <string name="app_name">Daily Shiba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">Click an option to navigate to that page</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_register">Register User</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_message">Hello, %1$s!</string>
    <string name="emailInput">Email</string>
    <string name="passwordInput">Password</string>
    <string name="loginText">Login</string>
    <string name="forgot_password_string">Reset password</string>
    <string name="terms_and_cond_string">Terms and Conditions</string>
    <string name="register_string">create an account</string>
    <string name="greeting_text">Welcome to DailyShiba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_user_title">Guest</string>
    <string name="normal_email_suggestion">Or use your email for registration</string>
    <string name="full_name_hint">Full name</string>
    <string name="terms_and_conditions_text">I agree to the terms and conditions</string>
    <string name="register_complete_button">Register</string>
    <string name="logoff">Logoff</string>
    <string name="welcoming_shiba">Welcome %1$s!, These are your current photos</string>
    <string name="get_more_photos">Get more photos</string>
    <string name="shiba_more_photos_dialog_title">More photos</string>
    <string name="shiba_more_photos_dialog_body">Watch an ad to get more awesome shiba photos?</string>
    <string name="shiba_more_photos_dialog_button_text">Give me more shiba goodness</string>
    <string name="shiba_more_photos_dialog_button_negative_text">I\'m fine with the current layout</string>
    <string name="shiba_page_title">Daily Shiba Photos</string>
    <string name="favorite_photos_title">Favorite Photos</string>
    <string name="profile_page_title">Profile</string>
    <string name="set_as_profile">Set this photo as a profile picture</string>
    <string name="shiba_profile_request_title">Change profile</string>
    <string name="shiba_profile_request_body">The following action would change your user profile to the current photo</string>
    <string name="shiba_profile_request_accept">Yes, change my profile</string>
    <string name="shiba_profile_request_decline">No, I\'m good with what I  have</string>
    <string name="welcome_message_favorites">Favorites</string>
    <string name="facebook_app_id">115533204011400</string>
    <string name="profile_display_name_category">DisplayName:</string>
    <string name="profile_profile_pic_category">Profile Pic:</string>
    <string name="admob_id">ca-app-pub-3634161836303395/9651535568</string>
    <string name="device_ad_id">269C868A919BAB91DD12E0A01A9C5AF9</string>
    <string name="default_web_client_id">35008376670-nq3pr77grjkec79t9krng5f01g0fuing.apps.googleusercontent.com</string>
    <string name="details_settings_share">Share</string>
    <string name="daily_shiba_sharing_template">This image was shared by Daily Shiba. \n\n\n Download from Google Play : https://play.google.com/store/apps/details?id=com.leschnitzky.dailyshiba</string>
    <string name="banner_ad_id">ca-app-pub-3634161836303395/6668518693</string>
    <string name="email_sent_confirmation">Reset email sent, please follow the instructions inside the email</string>
    <string name="leave_application_no">No, I want to see more Shibe</string>
    <string name="leave_application_yes">Yes, I would like to exit the application</string>
    <string name="leave_application">This action will close the application, are you sure?</string>
    <string name="leave_application_title">Exit application</string>
    <string name="profile_category">Profile Details</string>
    <string name="profile_dogs_category">Dog Preferences</string>
    <string name="profile_shiba_pref">Shiba</string>
    <string name="profile_corgi_pref">Corgi</string>
    <string name="profile_husky_pref">Husky</string>
    <string name="profile_beagle_pref">Beagle</string>
    <string name="must_be_signed">User must be signed in order to view his profile details</string>
    <string name="no_internet_connection">No internet connection detected. please connect to the internet</string>
</resources>