<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/unsigned"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login_menu"
            android:icon="@drawable/ic_user_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_register_user"
            android:title="@string/menu_register"
            />
        <item
            android:id="@+id/nav_settings_unsigned"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings"
            />
    </group>

    <group
        android:id="@+id/member"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/ic_logoff"
            android:title="@string/logoff"
            />
        <item
            android:id="@+id/nav_settings_member"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings"
            />
    </group>

</menu>