<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usermanagement.ui.login.LoginFragment">




    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_anim" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_greeting_animation_lottie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/login_welcome_text_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/greeting_anim" />


    <TextView
        android:id="@+id/login_welcome_text_view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/greeting_text"
        android:textAlignment="center"
        android:textAppearance="@style/TitleText"
        app:layout_constraintBottom_toTopOf="@+id/login_google_layout"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Theme.SergeyPortfolioApp"
        android:background="@drawable/shape_rounded_corner_rad_10"

        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/loginSectionGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_input_edit_text"
            android:background="@drawable/shape_rounded_corner_rad_10"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/emailInput"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input_layout"
        android:layout_width="0dp"
        app:boxBackgroundColor="@android:color/transparent"
        style="@style/Theme.SergeyPortfolioApp"

        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/login_email_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rounded_corner_rad_10"

            android:hint="@string/passwordInput"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_google_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_card_includer"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginSectionGuideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline">

        <ImageButton
            android:id="@+id/login_facebook_sign_in_button"
            android:layout_width="@dimen/register_page_circular_view"
            android:layout_height="@dimen/register_page_circular_view"
            android:layout_alignParentEnd="true"

            android:layout_weight="0.5"
            android:background="?colorBackgroundFloating"
            android:backgroundTint="?attr/colorSurface"

            android:src="@drawable/button_press_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_google_sign_in_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/login_google_sign_in_button"
            android:layout_width="@dimen/register_page_circular_view"
            android:layout_height="@dimen/register_page_circular_view"
            android:layout_alignParentStart="true"


            android:layout_toStartOf="@id/login_facebook_sign_in_button"
            android:layout_weight="0.5"
            android:background="?colorBackgroundFloating"
            android:backgroundTint="?attr/colorSurface"
            android:src="@drawable/button_press_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_facebook_sign_in_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:text="@string/loginText"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/login_password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_password_input_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05
" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95
" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginSectionGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/login_register_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_string"
        android:textSize="@dimen/little_button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/login_terms_and_conds_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_login_button" />

    <Button
        android:id="@+id/login_terms_and_conds_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"

        android:text="@string/terms_and_cond_string"
        android:textSize="@dimen/little_button_text_size"
        app:layout_constraintEnd_toEndOf="@+id/login_password_input_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_register_button"
        app:layout_constraintTop_toBottomOf="@+id/login_login_button" />

    <Button
        android:id="@+id/login_forgot_password_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"

        android:layout_width="192dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"

        android:text="@string/forgot_password_string"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/login_terms_and_conds_button"
        app:layout_constraintStart_toStartOf="@+id/login_register_button"
        app:layout_constraintTop_toBottomOf="@+id/login_register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>